--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -10,3 +10,26 @@
   left: 0;
   z-index: $z-index-sidebar;
 }
+
+.sidebar__header {
+  height: 180px;
+
+  background-color: $secondary;
+
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.sidebar__content {
+  padding: 0 2rem;
+}
+
+.sidebar__footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2rem;
+}
