--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -36,3 +36,6 @@ body {
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/container";
+@import "blocks/profile";
+@import "blocks/social";
+@import "blocks/btn";
