--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,3 +1,49 @@
-<aside class="sidebar">
-  Sidebar
+<aside class="sidebar" id="sidebar">
+  <div class="sidebar__header">
+    <img src="assets/images/sidebar_header_2.jpg" alt="">
+  </div>
+
+  <div class="sidebar__content">
+    <div class="profile">
+      <img class="profile__avatar" src="assets/images/author_100x100.jpg" alt="author's avatar">
+      <div class="profile__header">
+        <div class="profile__name">Павел Кириллов</div>
+        <div class="profile__prof">Pro front-end разработчик</div>
+      </div>
+
+      <ul class="social">
+        <li class="social__item">
+          <a class="social__link" href="#" target="_blank">
+            <img src="assets/images/instagram.svg" alt="Павел Кириллов instagram">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#" target="_blank">
+            <img src="assets/images/vk.svg" alt="Павел Кириллов vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#" target="_blank">
+            <img src="assets/images/pinterest.svg" alt="Павел Кириллов pinterest">
+          </a>
+        </li>
+      </ul>
+      <!-- /.social -->
+
+      <div class="profile__text">
+        <p>Front-end разработчик. Практик верстки сайтов. Созданием сайтов занимаюсь с 2012 года. Работал в нескольких
+          ИТ компаниях и наработал более 10 000 часов в создании сайтов различной сложности.</p>
+      </div>
+
+    </div>
+    <!-- /.profile -->
+  </div>
+  <!-- /.sidebar__content -->
+
+  <div class="sidebar__footer">
+    <a class="btn btn--red" href="works.html">Мои работы</a>
+    <button class="btn btn--blue" type="button" data-modal="contact-modal">Написать мне</button>
+
+  </div>
 </aside>
+<!-- /.sidebar -->
