--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,6 +1,6 @@
 <aside class="sidebar" id="sidebar">
   <div class="sidebar__header">
-    <img src="assets/images/sidebar_header_2.jpg" alt="">
+    <img src="assets/images/sidebar_header_2.webp" alt="">
   </div>
 
   <div class="sidebar__content">
