--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -10,3 +10,13 @@
   right: 0;
   z-index: $z-index-header;
 }
+
+.header__left {
+  width: 60%;
+}
+
+.header__right {
+  width: 40%;
+  display: flex;
+  justify-content: flex-end;
+}
