Posts on main page. Video in iframe. Pagination

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -44,3 +44,6 @@ body {
 @import "blocks/btn";
 @import "blocks/stories";
 @import "blocks/add-post";
+@import "blocks/posts";
+@import "blocks/embed";
+@import "blocks/pagination";
