--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -30,6 +30,14 @@ body {
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 /* Blocks */
 @import "blocks/page";
 @import "blocks/header";
@@ -44,6 +52,9 @@ body {
 @import "blocks/btn";
 @import "blocks/stories";
 @import "blocks/add-post";
-@import "blocks/posts";
+@import "blocks/post";
 @import "blocks/embed";
 @import "blocks/pagination";
+@import "blocks/related";
+@import "blocks/comments";
+@import "blocks/form";
