works.html and search.html

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -58,3 +58,6 @@ a {
 @import "blocks/related";
 @import "blocks/comments";
 @import "blocks/form";
+@import "blocks/page";
+@import "blocks/work";
+@import "blocks/tags.scss";
