--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,6 +22,10 @@ body {
     font-size: 1.4rem;
     line-height: 1.5;
     color: $white;
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 *,
@@ -60,5 +64,6 @@ a {
 @import "blocks/form";
 @import "blocks/page";
 @import "blocks/work";
-@import "blocks/tags.scss";
-@import "blocks/cabinet.scss";
+@import "blocks/tags";
+@import "blocks/cabinet";
+@import "blocks/modal";
