--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     {{> head }}
@@ -22,6 +22,9 @@
     </div>
     <!-- ./page -->
 
+    {{> story-modal }}
+    {{> share-modal }}
+    {{> contact-modal }}
     <!-- JS -->
     <script src="assets/js/app.js"></script>
 </body>
