--- a/src/assets/scss/blocks/add-post.scss
+++ b/src/assets/scss/blocks/add-post.scss
@@ -8,6 +8,10 @@
   background-color: $secondary;
   box-shadow: 0px 15px 25px rgba($black, .45);
   border-radius: 5px;
+
+  @include breakpoint($mobile-bp) {
+    padding: 1.5rem;
+  }
 }
 
 .add-post__textarea {
@@ -34,6 +38,10 @@
   flex-shrink: 0;
   display: flex;
   justify-content: space-between;
+
+  @include breakpoint($mobile-bp) {
+    width: 9rem;
+  }
 }
 
 .add-post__file,
@@ -47,6 +55,11 @@
   cursor: pointer;
 
   transition: background-color .2s linear;
+
+  @include breakpoint($mobile-bp) {
+    width: 3.4rem;
+    height: 3.4rem;
+  }
 }
 
 .add-post__file {
@@ -58,6 +71,10 @@
 
   &:hover {
     background-color: darken(#EBEBEB, 5%);
+  }
+
+  @include breakpoint($mobile-bp) {
+    background-size: 1.8rem;
   }
 }
 
@@ -71,5 +88,9 @@
 
   &:hover {
     background-color: darken($blue, 5%);
+  }
+
+  @include breakpoint($mobile-bp) {
+    background-size: 1.5rem;
   }
 }
