--- a/src/assets/scss/blocks/nav.scss
+++ b/src/assets/scss/blocks/nav.scss
@@ -1,5 +1,25 @@
+.nav {
+
+  &--mobile {
+    display: none;
+    margin: 3rem 0;
+  }
+
+  @include breakpoint($tablet-bp) {
+    display: none;
+
+    &--mobile {
+      display: block;
+    }
+  }
+}
+
 .nav__list {
   display: flex;
+
+  @include breakpoint($tablet-bp) {
+    flex-direction: column;
+  }
 }
 
 .nav__item {
@@ -13,6 +33,14 @@
 
     >.subnav {
       display: block;
+    }
+  }
+
+  @include breakpoint($tablet-bp) {
+    &:hover {
+      .nav__link {
+        background: none;
+      }
     }
   }
 }
@@ -47,5 +75,12 @@
       right: 1.35rem;
       transform: translateY(-50%)
     }
+  }
+
+  @include breakpoint($tablet-bp) {
+    padding-left: 0;
+    padding-right: 0;
+
+    font-size: 1.6rem;
   }
 }
