--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -9,6 +9,23 @@
   top: 0;
   left: 0;
   z-index: $z-index-sidebar;
+
+  @include breakpoint($tablet-bp) {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 4rem);
+    padding-bottom: 1.5rem;
+    overflow: auto;
+
+    top: 4rem;
+
+    transform: translateX(-100%);
+    transition: transform .2s linear;
+
+    .show-sidebar & {
+      transform: translateX(0);
+    }
+  }
 }
 
 .sidebar__header {
@@ -22,10 +39,18 @@
     height: 100%;
     object-fit: cover;
   }
+
+  @include breakpoint($tablet-bp) {
+    height: 10rem;
+  }
 }
 
 .sidebar__content {
   padding: 0 2rem;
+
+  @include breakpoint($tablet-bp) {
+    flex-grow: 1;
+  }
 }
 
 .sidebar__footer {
