--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import "vars";
+@import "mixins";
 @import "vendor/reset";
 
 :root {
@@ -23,7 +24,8 @@ body {
     line-height: 1.5;
     color: $white;
 
-    &.no-scroll {
+    &.no-scroll,
+    &.show-sidebar {
         overflow: hidden;
     }
 }
@@ -45,6 +47,7 @@ a {
 /* Blocks */
 @import "blocks/page";
 @import "blocks/header";
+@import "blocks/burger";
 @import "blocks/nav";
 @import "blocks/subnav";
 @import "blocks/search";
