--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,6 +31,11 @@
     </nav>
     <!-- /.nav -->
 
+    <!--burger-menu ↓ -->
+    <button class="burger active" type="button" id="sidebarToggle">
+      <span>Открыть навигацию</span>
+    </button>
+
   </div>
   <!-- /.header_left -->
 
