--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -11,6 +11,7 @@
         <div class="profile__prof">Pro front-end разработчик</div>
       </div>
 
+      <!-- Social links -->
       <ul class="social">
         <li class="social__item">
           <a class="social__link" href="#" target="_blank">
@@ -37,6 +38,44 @@
 
     </div>
     <!-- /.profile -->
+
+    <!-- nav--mobile -->
+    <nav class="nav nav--mobile">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="index.html">Главная</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link has-subnav" href="#">Статьи</a>
+          <ul class="subnav">
+            <li>
+              <a class="subnav__link" href="#">Создание сайтов</a>
+            </li>
+            <li>
+              <a class="subnav__link" href="#">Интернет-маркетинг</a>
+            </li>
+            <li>
+              <a class="subnav__link" href="#">Продвижение видео</a>
+            </li>
+          </ul>
+          <!-- /.subnav -->
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="text.html">Обо мне</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="text.html">Реклама</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="profile.html">Профиль</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Выйти</a>
+        </li>
+      </ul>
+      <!-- /.nav_list -->
+    </nav>
+    <!-- /.nav nav--mobile-->
   </div>
   <!-- /.sidebar__content -->
 
