--- a/src/assets/scss/blocks/stories.scss
+++ b/src/assets/scss/blocks/stories.scss
@@ -5,6 +5,11 @@
   grid-template-rows: 195px;
 
   margin-bottom: 3rem;
+
+  @include breakpoint($mobile-bp) {
+    grid-template-columns: 14rem 14rem 14rem 14rem;
+    overflow: auto;
+  }
 }
 
 .stories__item {
