--- a/src/assets/scss/blocks/work.scss
+++ b/src/assets/scss/blocks/work.scss
@@ -6,6 +6,10 @@
   background-color: $primary;
   box-shadow: 0 15px 25px rgba($black, .35);
   border-radius: 5px;
+
+  @include breakpoint($mobile-bp) {
+    flex-direction: column;
+  }
 }
 
 .work__preview {
@@ -17,6 +21,11 @@
     height: 100%;
     object-fit: cover;
   }
+
+  @include breakpoint($mobile-bp) {
+    height: 15rem;
+    width: 100%;
+  }
 }
 
 .work__content {
@@ -24,6 +33,12 @@
   flex-direction: column;
   max-width: 29rem;
   padding: 2.5rem;
+
+  @include breakpoint($mobile-bp) {
+    max-width: none;
+
+    padding: 1.5rem;
+  }
 }
 
 .work__title {
@@ -36,6 +51,10 @@
   a {
     color: inherit;
   }
+
+  @include breakpoint($mobile-bp) {
+    margin-bottom: 2rem;
+  }
 }
 
 .work__description {
@@ -45,9 +64,19 @@
   line-height: 1.68;
   font-weight: 300;
   color: #D2D2D2;
+
+  @include breakpoint($mobile-bp) {
+    margin-bottom: 2rem;
+
+    font-size: 1.4rem;
+  }
 }
 
 .work__footer {
   margin-top: auto;
   text-align: right;
+
+  @include breakpoint($mobile-bp) {
+    text-align: left;
+  }
 }
