--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,7 +32,7 @@
     <!-- /.nav -->
 
     <!--burger-menu ↓ -->
-    <button class="burger active" type="button" id="sidebarToggle">
+    <button class="burger active" type="button" id="burger">
       <span>Открыть навигацию</span>
     </button>
 
